--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
+    "express": "^4.16.2",
     "slackbots": "^0.5.3",
     "superagent": "^3.0.0"
   }
